--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#FF03A9F4</color>
-    <color name="primary_dark">#FF0288D1</color>
+    <color name="primary">#4381ff</color>
+    <color name="primary_dark">#40619f</color>
     <color name="mainColor">#4381E7</color>
     <color name="textColor">#848484</color>
     <color name="status_bar_color">@color/primary_dark</color>
+    <color name="white">#ffffff</color>
 </resources>
