--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -2,37 +2,43 @@
 <resources>
     <declare-styleable name="DiscView">
         <!--圆圈线的宽度-->
-        <attr name="dvStrokenWidth" format="dimension" />
+        <attr name="dvStrokenWidth" format="dimension"/>
         <!--圆圈颜色-->
-        <attr name="dvStrokenColor" format="color" />
+        <attr name="dvStrokenColor" format="color"/>
         <!--外装饰圆是否显示-->
-        <attr name="dvOuterCircleShow" format="boolean" />
+        <attr name="dvOuterCircleShow" format="boolean"/>
         <!--外装饰圆距离圆环边距-->
-        <attr name="dvOuterCirclePad" format="dimension" />
+        <attr name="dvOuterCirclePad" format="dimension"/>
 
         <!--内部装饰圆是否显示-->
-        <attr name="dvInnerCircleShow" format="boolean" />
+        <attr name="dvInnerCircleShow" format="boolean"/>
         <!--内部装饰圆距离圆环边距-->
-        <attr name="dvInnerCirclePad" format="dimension" />
+        <attr name="dvInnerCirclePad" format="dimension"/>
 
         <!--底部圆形是否显示-->
-        <attr name="dvBottomCircleIsShow" format="boolean" />
+        <attr name="dvBottomCircleIsShow" format="boolean"/>
 
         <!--圆形指示图片-->
         <attr name="dvIndicatorDraw" format="reference"/>
 
         <!--圆盘开始旋转角度值-->
-        <attr name="dvStartRotateAngle" format="integer" />
+        <attr name="dvStartRotateAngle" format="integer"/>
         <!--圆盘可旋转角度范围-->
-        <attr name="dvAngleRotateSpan" format="integer" />
+        <attr name="dvAngleRotateSpan" format="integer"/>
 
         <!--圆盘模式-->
         <attr name="dvCircleMode">
-            <enum name="normal" value="1" />
-            <enum name="round" value="2" />
-            <enum name="dot" value="3" />
+            <enum name="normal" value="1"/>
+            <enum name="round" value="2"/>
+            <enum name="dot" value="3"/>
         </attr>
     </declare-styleable>
+
+    <declare-styleable name="CircleImageView">
+        <attr name="border_width" format="dimension"/>
+        <attr name="border_color" format="color"/>
+    </declare-styleable>
+
 
     <string-array name="icon_name">
         <item>手机防盗</item>
