--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="primary">#4381ff</color>
-    <color name="primary_dark">#40619f</color>
+    <color name="primary_dark">#4381ff</color>
     <color name="mainColor">#4381E7</color>
     <color name="textColor">#848484</color>
     <color name="status_bar_color">@color/primary_dark</color>
     <color name="white">#ffffff</color>
+    <color name="divide_line_color">#7f7f7f</color>
+    <color name="black">#000000</color>
+    <color name="left_bg_color">#E7E5E4</color>
 </resources>
