--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/item_home"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+<LinearLayout
+    android:id="@+id/item_home"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/left_item_selector"
+    android:orientation="horizontal"
+    android:gravity="center_vertical">
 
     <ImageView
         android:id="@+id/img_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_marginLeft="30dp"
         android:src="@mipmap/icon_app"/>
 
     <TextView
         android:id="@+id/tv_icon_name"
+        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_marginLeft="16dp"
         android:layout_toRightOf="@id/img_icon"
         android:text="应用管理"
         android:textColor="@color/textColor"
         android:textSize="20sp"/>
-</RelativeLayout>
+</LinearLayout>
