--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -47,4 +47,8 @@
         <item>软件管家</item>
         <item>缓存清理</item>
     </string-array>
+    <string-array name="left_menu_text">
+        <item>信息备份</item>
+        <item>二维码扫描</item>
+    </string-array>
 </resources>
