--- a/app/src/main/res/drawable/left_item_selector.xml
+++ b/app/src/main/res/drawable/left_item_selector.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/reveal_color" android:state_pressed="true"></item>
-    <item android:drawable="@color/left_bg_color"></item>
+    <item android:drawable="@drawable/reveal_color" android:state_pressed="true"/>
+    <item android:drawable="@drawable/reveal_color" android:state_checked="true"/>
+    <item android:drawable="@drawable/left_bg_color"/>
 </selector>
