PhoneManager:add the baseActivity to format the code.
scope: PhoneManager
type: change

Signed-off-by: hgdswj <hgdswj@163.com>

--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<com.wjustudio.phoneManager.widgt.RevealLayout
     android:id="@+id/item_home"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -24,4 +24,4 @@
         android:text="应用管理"
         android:textColor="@color/textColor"
         android:textSize="20sp"/>
-</LinearLayout>
+</com.wjustudio.phoneManager.widgt.RevealLayout>
