PhoneManager:add a style
extract a style
scope: phoneManager
type: featur

Signed-off-by: songwenju <songwenju@outlook.com>

--- a/app/src/main/res/layout/dialog_set_password.xml
+++ b/app/src/main/res/layout/dialog_set_password.xml
@@ -5,14 +5,8 @@
               android:orientation="vertical">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/primary"
-        android:gravity="center"
-        android:padding="15dp"
-        android:text="@string/set_pwd_title"
-        android:textColor="@color/white"
-        android:textSize="20sp"/>
+        style="@style/common_title"
+        android:text="@string/set_pwd_title"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,6 +24,7 @@
             android:id="@+id/et_pwd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@android:color/darker_gray"
             android:inputType="textPassword"/>
     </LinearLayout>
 
@@ -48,6 +43,7 @@
             android:id="@+id/et_rePwd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@android:color/darker_gray"
             android:inputType="textPassword"/>
     </LinearLayout>
 
