--- a/app/src/main/res/layout/activity_security_setting.xml
+++ b/app/src/main/res/layout/activity_security_setting.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <ImageView
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp_security_setting"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@mipmap/pic_guidepage_1"/>
+        android:flipInterval="30"
+        android:persistentDrawingCache="animation"/>
+
 </LinearLayout>
