--- a/app/src/main/res/layout/activity_proof_setup_two.xml
+++ b/app/src/main/res/layout/activity_proof_setup_two.xml
@@ -16,7 +16,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:text="@string/security_description"
-        android:textColor="@color/dialogTextColor"
+        android:textColor="@color/dialog_text_color"
         android:textSize="18sp"/>
 
     <LinearLayout
@@ -32,9 +32,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="请输入安全号码"
+            android:hint="请输入11位安全号码"
             android:inputType="phone"
-            android:textColor="@color/dialogTextColor"/>
+            android:textColor="@color/dialog_text_color"/>
 
         <ImageButton
             android:id="@+id/btn_select_number"
@@ -50,6 +50,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/start_security"
-        android:textColor="@color/ButtonTextColor"
+        android:textColor="@color/btn_text_color"
         android:textSize="18sp"/>
 </LinearLayout>
