--- a/app/src/main/res/layout/dialog_input_password.xml
+++ b/app/src/main/res/layout/dialog_input_password.xml
@@ -24,7 +24,7 @@
             android:id="@+id/et_pwd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/dialogTextColor"
+            android:textColor="@color/dialog_text_color"
             android:inputType="textPassword"/>
     </LinearLayout>
 
