--- a/app/src/main/res/layout/select_contact_item.xml
+++ b/app/src/main/res/layout/select_contact_item.xml
@@ -8,25 +8,26 @@
         android:id="@+id/tv_pinyin"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:background="#9e9e9e"
+        android:background="#bebebe"
         android:gravity="center_vertical"
-        android:paddingLeft="10dp"
+        android:paddingLeft="30dp"
         android:text="A"
         android:textColor="#ffffff"
         android:textSize="25sp" />
 
-    <com.wjustudio.phoneManager.widgt.RevealLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/btn_selector"
         android:orientation="horizontal">
 
     <TextView
         android:id="@+id/contact_name"
         android:layout_width="match_parent"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:layout_height="40dp"
         android:gravity="center_vertical"
-        android:paddingLeft="10dp"
+        android:paddingLeft="20dp"
         android:text="阿里云"
         android:textColor="#000000"
         android:textSize="20sp" />
@@ -41,6 +42,6 @@
             android:text="110"
             android:textColor="#000000"
             android:textSize="20sp" />
-    </com.wjustudio.phoneManager.widgt.RevealLayout>
+    </LinearLayout>
 
 </LinearLayout>
