PhoneManager: add some feature for open theftProof Setting
Signed-off-by: hgdswj <hgdswj@163.com>

--- a/app/src/main/res/layout/activity_proof_setting.xml
+++ b/app/src/main/res/layout/activity_proof_setting.xml
@@ -54,7 +54,8 @@
             android:id="@+id/sb_md"
             style="@style/SwitchButtonStyleMD"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"/>
 
     </LinearLayout>
     <View
