--- a/app/src/main/res/layout/dialog_reset_safe_num.xml
+++ b/app/src/main/res/layout/dialog_reset_safe_num.xml
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/dialog_text_color"
-            android:inputType="textPassword"/>
+            android:inputType="phone"/>
     </LinearLayout>
 
     <LinearLayout
