--- a/app/src/main/res/layout/activity_comm_guard.xml
+++ b/app/src/main/res/layout/activity_comm_guard.xml
@@ -43,9 +43,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="暂无数据,请添加"
-            android:textSize="20sp"
-            />
+            android:visibility="invisible"
+            android:text="暂无拦截的号码,请点击按钮添加"
+            android:textSize="20sp" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/lv_callsms_safe"
@@ -59,23 +59,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:orientation="vertical"
-           >
+            android:orientation="vertical">
 
             <ProgressBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="invisible"
                 android:layout_gravity="center" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="invisible"
                 android:text="玩命加载中..."
                 android:textSize="20sp" />
         </LinearLayout>
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/id_floatingactionbutton"
+            android:id="@+id/id_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
