--- a/app/src/main/res/layout/dialog_add_black_num.xml
+++ b/app/src/main/res/layout/dialog_add_black_num.xml
@@ -32,6 +32,7 @@
         android:orientation="horizontal">
 
         <CheckBox
+            android:id="@+id/cb_phone"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -39,6 +40,7 @@
             android:text="@string/phone_intercept"/>
 
         <CheckBox
+            android:id="@+id/cb_sms"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
