--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,7 +21,7 @@
     <color name="ksw_md_ripple_checked">#327FC2</color>
     <color name="ksw_md_solid_shadow">#33000000</color>
     <color name="ksw_md_solid_normal">#ECECEC</color>
-    <color name="ksw_md_solid_checked">#154B7A</color>
+    <color name="ksw_md_solid_checked">#0087CD</color>
     <color name="ksw_md_solid_disable">#FFFFFF</color>
     <color name="ksw_md_solid_checked_disable">#aaaaaa</color>
 
