PhoneManager: fix the bug for blackNum
Signed-off-by: hgdswj <hgdswj@163.com>

--- a/app/src/main/res/layout/activity_black_num.xml
+++ b/app/src/main/res/layout/activity_black_num.xml
@@ -39,7 +39,7 @@
         android:layout_height="match_parent" >
 
         <TextView
-            android:id="@+id/tv_callSmsSafe_isEmpty"
+            android:id="@+id/tv_black_num_remind"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
