--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="primary">#4381ff</color>
-    <color name="primary_dark">#154B7A</color>
+    <color name="primary_dark">#154Bff</color>
     <color name="mainColor">#4381E7</color>
     <color name="textColor">#848484</color>
     <color name="status_bar_color">@color/primary_dark</color>
@@ -10,11 +10,11 @@
     <color name="black">#000000</color>
     <color name="left_bg_color">#E7E5E4</color>
     <color name="reveal_color">#1b000000</color>
-    <color name="dialog_text_color">#333333</color>
-    <color name="btn_text_color">#333333</color>
     <color name="btn_press_color">#bebebe</color>
     <drawable name="reveal_color">#1b000000</drawable>
     <drawable name="left_bg_color">#E7E5E4</drawable>
+    <color name="gray">#333333</color>
+    <color name="tabTextColor">#88ffffff</color>
 
     <!-- switchButton-->
     <color name="ksw_md_ripple_normal">#1E000000</color>
