--- a/app/src/main/res/layout/dialog_reset_password.xml
+++ b/app/src/main/res/layout/dialog_reset_password.xml
@@ -24,7 +24,7 @@
             android:id="@+id/et_origin_pwd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/dialog_text_color"
+            android:textColor="@color/gray"
             android:inputType="textPassword"/>
     </LinearLayout>
 
@@ -43,7 +43,7 @@
             android:id="@+id/et_reset_pwd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/dialog_text_color"
+            android:textColor="@color/gray"
             android:inputType="textPassword"/>
     </LinearLayout>
 
@@ -62,7 +62,7 @@
             android:id="@+id/et_resetPwd_again"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/dialog_text_color"
+            android:textColor="@color/gray"
             android:inputType="textPassword"/>
     </LinearLayout>
 
